--- a/src/js/Components/Header/Menu/_menu.scss
+++ b/src/js/Components/Header/Menu/_menu.scss
@@ -7,9 +7,11 @@
 
   li {
     list-style: none;
+    margin-right: 2em;
     a {
       color: variables.$adjacentColor;
       text-decoration: none;
+      font-family: "DM Sans", sans-serif;
     }
   }
 }
