--- a/src/scss/general/_variables.scss
+++ b/src/scss/general/_variables.scss
@@ -4,4 +4,4 @@ $adjacentColor: #A7A7A7;
 $headingColor: #D9D9D9;
 $cardColor: #363636;
 
-$primaryFont : "Poppins, sans-serif";
+$primaryFont : "Poppins", sans-serif;
