--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,5 +1,6 @@
 @use "../general/variables";
-
+@use "./grid";
+@use "../general/typography";
 body{
   background-color: variables.$primaryColor;
   font-family: variables.$primaryFont;
