--- a/src/scss/layout/_grid.scss
+++ b/src/scss/layout/_grid.scss
@@ -1,7 +1,14 @@
+@use "../general/mixins";
+
 .container {
   width: 1200px;
   margin: 0 auto;
-
+  @include mixins.mobile {
+    width: 100%;
+  }
+  @include mixins.mobile {
+    width: 90%;
+  }
   .row {
     display: flex;
     flex-wrap: wrap;
@@ -11,6 +18,12 @@
     display: flex;
     width: calc(100% / $i);
     min-height: 1px;
+    @include mixins.mobile {
+      width: 100%;
+    }
+    @include mixins.tablet {
+      width: 50%;
+    }
   }
   }
 }
