--- a/src/scss/general/_variables.scss
+++ b/src/scss/general/_variables.scss
@@ -3,5 +3,6 @@ $secondaryColor: #CCCCCC;
 $adjacentColor: #A7A7A7;
 $headingColor: #D9D9D9;
 $cardColor: #363636;
+$footerDivider: rgba(66,68,110,0.3);
 
 $primaryFont : "Poppins", sans-serif;
