--- a/src/js/Components/Header/_header.scss
+++ b/src/js/Components/Header/_header.scss
@@ -16,6 +16,10 @@
   .header__logo {
     filter: grayscale(1);
   }
+  @include mixins.mobile {
+    .menu { display: none;}
+    justify-content: center;
+  }
 }
 .footer__divider {
   border-top: 3px solid variables.$footerDivider;
@@ -24,6 +28,7 @@
   margin-bottom: 3em;
 }
 .footer__copyright {
+  @include mixins.mobile { text-align: center; }
   p {
     color: variables.$adjacentColor;
   }
