--- a/src/js/Components/Projects/Project/_project.scss
+++ b/src/js/Components/Projects/Project/_project.scss
@@ -5,6 +5,9 @@
   border-radius: 2em;
   margin: 1em;
   text-align: left;
+  > img:first-of-type {
+    width: 100%;
+  }
   .project__container {
     padding: 1.5em;
   }
