--- a/src/js/Components/Projects/Project/_project.scss
+++ b/src/js/Components/Projects/Project/_project.scss
@@ -26,7 +26,7 @@
     margin-top: 1em;
     color: variables.$secondaryColor;
 
-    a { text-decoration: underline; }
+    a { text-decoration: underline; color: variables.$secondaryColor; }
     img {
       margin-right: 0.5em;
     }
